--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "vue-project",
+  "version": "0.0.1",
+  "description": "a new project for vue",
+  "scripts": {
+    "start": "ENVIRONMENT=development hpack d",
+    "build": "ENVIRONMENT=production hpack b"
+  },
+  "author": "schacker",
+  "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
